# pricoles

./: CMakeLists.txt  sorevnovania.cpp
.github/workflows/: build.yml
src/: sorevnovania.cpp
